--- a/styles/accountPanel.css
+++ b/styles/accountPanel.css
@@ -258,6 +258,11 @@
 
 /* Responsive Adjustments */
 @media (max-width: 768px) {
+
+  .container-fluid {
+    padding: 0;
+  } 
+
   .profile-name {
     font-size: 1rem;
   }
